<?xml version="1.0"?>
<package format="1">
  <name>tiago_audio_streamer</name>
  <version>0.0.0</version>
  <description>The tiago_audio_streamer package</description>

  <maintainer email="pal@todo.todo">pal</maintainer>
  <license>MIT</license> <!-- Replace 'MIT' with your actual license -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
